--- a/AgeGradeCalculator/AgeGradeCalculator.csproj
+++ b/AgeGradeCalculator/AgeGradeCalculator.csproj
@@ -1,8 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard1.0</TargetFramework>
     <RootNamespace>FLRC.AgeGradeCalculator</RootNamespace>
+    <Authors>ecoAPM LLC</Authors>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/FingerLakesRunnersClub/AgeGradeCalculator</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/FingerLakesRunnersClub/AgeGradeCalculator</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
