--- a/AgeGradeCalculator/AgeGradeCalculator.csproj
+++ b/AgeGradeCalculator/AgeGradeCalculator.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>FLRC.AgeGradeCalculator</RootNamespace>
     <Authors>ecoAPM LLC</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -9,7 +9,7 @@
     <RepositoryUrl>https://github.com/FingerLakesRunnersClub/AgeGradeCalculator</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.3</Version>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
 </Project>
