--- a/Generator/Generator.csproj
+++ b/Generator/Generator.csproj
@@ -1,22 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net5.0</TargetFramework>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="EPPlus" Version="5.4.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\AgeGradeCalculator\AgeGradeCalculator.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Records.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
-  </ItemGroup>
-
+    <ItemGroup>
+        <PackageReference Include="EPPlus" Version="5.4.2"/>
+        <ProjectReference Include="..\AgeGradeCalculator\AgeGradeCalculator.csproj"/>
+        <None Include="Records.cs" CopyToOutputDirectory="Always"/>
+    </ItemGroup>
 </Project>
