--- a/AgeGradeCalculator/AgeGradeCalculator.csproj
+++ b/AgeGradeCalculator/AgeGradeCalculator.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <Version>1.1.0</Version>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>FLRC.AgeGradeCalculator</RootNamespace>
     <Authors>ecoAPM LLC</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -9,7 +10,10 @@
     <RepositoryUrl>https://github.com/FingerLakesRunnersClub/AgeGradeCalculator</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
+  </ItemGroup>
 
 </Project>
