--- a/AgeGradeCalculator/AgeGradeCalculator.csproj
+++ b/AgeGradeCalculator/AgeGradeCalculator.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Version>1.1.0</Version>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>FLRC.AgeGradeCalculator</RootNamespace>
-    <Authors>ecoAPM LLC</Authors>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/FingerLakesRunnersClub/AgeGradeCalculator</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/FingerLakesRunnersClub/AgeGradeCalculator</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Version>1.1.0</Version>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<LangVersion>latest</LangVersion>
+		<RootNamespace>FLRC.AgeGradeCalculator</RootNamespace>
+		<Authors>ecoAPM LLC</Authors>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/FingerLakesRunnersClub/AgeGradeCalculator</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/FingerLakesRunnersClub/AgeGradeCalculator</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="System.Collections.Immutable" Version="6.0.0"/>
+	</ItemGroup>
 
 </Project>
