--- a/AgeGradeCalculatorTests/AgeGradeCalculatorTests.csproj
+++ b/AgeGradeCalculatorTests/AgeGradeCalculatorTests.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>FLRC.AgeGradeCalculator.Tests</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
