--- a/Generator/Generator.csproj
+++ b/Generator/Generator.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="EPPlus" Version="8.0.1"/>
+        <PackageReference Include="ClosedXML" Version="0.104.2"/>
         <ProjectReference Include="..\AgeGradeCalculator\AgeGradeCalculator.csproj"/>
         <None Include="Records.cs" CopyToOutputDirectory="Always"/>
     </ItemGroup>
