--- a/Generator/Generator.csproj
+++ b/Generator/Generator.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net9.0</TargetFramework>
-        <RootNamespace>FLRC.AgeGradeCalculator.Generator</RootNamespace>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net9.0</TargetFramework>
+		<RootNamespace>FLRC.AgeGradeCalculator.Generator</RootNamespace>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="ClosedXML" Version="0.104.2"/>
-        <ProjectReference Include="..\AgeGradeCalculator\AgeGradeCalculator.csproj"/>
-        <None Include="Records.cs" CopyToOutputDirectory="Always"/>
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="ClosedXML" Version="0.104.2"/>
+		<ProjectReference Include="..\AgeGradeCalculator\AgeGradeCalculator.csproj"/>
+		<None Include="Road.cs" CopyToOutputDirectory="Always"/>
+	</ItemGroup>
 </Project>
