Move source data files to generator project

--- a/Generator/Generator.csproj
+++ b/Generator/Generator.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="ClosedXML" Version="0.104.2"/>
 		<PackageReference Include="PdfPig" Version="0.1.10"/>
 		<ProjectReference Include="..\AgeGradeCalculator\AgeGradeCalculator.csproj"/>
+		<None Include="Data/*" CopyToOutputDirectory="Always"/>
 		<None Include="Road.cs" CopyToOutputDirectory="Always"/>
 		<None Include="Track.cs" CopyToOutputDirectory="Always"/>
 	</ItemGroup>
